--- a/templates/result.html
+++ b/templates/result.html
@@ -24,22 +24,15 @@
 		<!-- Result -->
 		<div class="results">
 			{% if prediction==1 %}
-				<h1>Prediction: <span class='danger'>Oops! You have Chances of Heart Disease.</span></h1>
+				<h1>Prediction: <span class='danger'>Please consult a Doctor !! You have a Heart Disease.</span></h1>
 				
 			{% elif prediction==0 %}
-				<h1>Prediction: <span class='safe'>Great! You DON'T chances have Heart Disease.</span></h1>
+				<h1>Prediction: <span class='safe'>Great! You DON'T have any Heart Disease.</span></h1>
 				
 			{% endif %}
 		</div>
 
-		<!-- Footer
-       <div class='footer'>
-           <div class="contact">
-               <a target="_blank" href="https://github.com/asthasharma98/Heart-Disease-Prediction-Deployment"><i class="fab fa-github fa-lg contact-icon"></i></a>
-               <a target="_blank" href="https://www.linkedin.com/in/astha-sharma-47266b11b/"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
-           </div>
-           <p class='footer-description'>Made by Astha Sharma.</p>
-       </div> -->
+		
 
 	</body>
 </html>
